feat(validator, types, utils): add package

--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -29,6 +29,8 @@
     "email": "dongkyu.me@gmail.com"
   },
   "devDependencies": {
+    "@types/navermaps": "^3.6.4",
+    "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "eslint": "*",
