--- a/apps/react-playground/package.json
+++ b/apps/react-playground/package.json
@@ -3,37 +3,15 @@
   "description": "react-naver-maps playground",
   "version": "0.0.0",
   "license": "MIT",
-  "main": "dist/react-naver-maps.cjs.js",
-  "module": "dist/react-naver-maps.esm.js",
-  "types": "dist/react-naver-maps.d.ts",
-  "files": [
-    "dist/*.js",
-    "dist/react-naver-maps.d.ts",
-    "README.md"
-  ],
-  "sideEffects": false,
   "scripts": {
-    "dev": "vite",
-    "lint": "eslint -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "yarn lint --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DongKyuuuu/naver-maps"
-  },
-  "author": {
-    "name": "Dongkyuuuu",
-    "email": "dongkyu.me@gmail.com"
-  },
-  "bug": {
-    "url": "https://github.com/Dongkyuuuu/naver-maps/issues",
-    "email": "dongkyu.me@gmail.com"
+    "dev": "vite"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
