--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -37,6 +37,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsconfig": "*",
-    "typescript": "*"
+    "types": "*",
+    "typescript": "*",
+    "utils": "*",
+    "validator": "*"
   }
 }
