--- a/apps/react-playground/package.json
+++ b/apps/react-playground/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/navermaps": "^3.6.4",
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
