feat(react,vue): change package name

--- a/apps/react-playground/package.json
+++ b/apps/react-playground/package.json
@@ -11,13 +11,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@dongkyuuuu/react-naver-maps": "*",
     "@types/navermaps": "^3.6.4",
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "*",
-    "react-naver-maps": "*",
     "tsconfig": "*",
     "typescript": "*",
     "vite": "^4.1.0"
