--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-naver-maps",
+  "name": "@dongkyuuuu/react-naver-maps",
   "description": "NaverMap component for react",
   "version": "0.0.0",
   "license": "MIT",
