--- a/apps/vue/package.json
+++ b/apps/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-naver-maps",
+  "name": "@dongkyuuuu/vue3-naver-maps",
   "description": "NaverMap component for vue3",
   "version": "0.0.0",
   "license": "MIT",
