--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-turbo": "^0.0.9",
     "husky": "^8.0.3",
     "prettier": "latest",
+    "tsup": "^6.6.3",
     "turbo": "latest",
     "typescript": "^4.9.5"
   },
