chore(react-playground, vue): package private

--- a/apps/react-playground/package.json
+++ b/apps/react-playground/package.json
@@ -3,6 +3,7 @@
   "description": "react-naver-maps playground",
   "version": "0.0.0",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "dev": "vite"
   },
