--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "lint": "eslint -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "yarn lint --fix",
-    "build": "tsup"
+    "build": "tsup --dts-resolve"
   },
   "repository": {
     "type": "git",
@@ -27,9 +27,6 @@
   "bug": {
     "url": "https://github.com/Dongkyuuuu/naver-maps/issues",
     "email": "dongkyu.me@gmail.com"
-  },
-  "dependencies": {
-    "types": "*"
   },
   "devDependencies": {
     "@types/navermaps": "^3.6.4",
