--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -19,6 +19,7 @@
     "eslint": "*",
     "tsconfig": "*",
     "types": "*",
-    "typescript": "*"
+    "typescript": "*",
+    "utils": "*"
   }
 }
