feat(utils): delete validator

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,7 +15,6 @@
     "@types/node": "^18.15.0",
     "eslint": "*",
     "tsconfig": "*",
-    "typescript": "*",
-    "validator": "*"
+    "typescript": "*"
   }
 }
