--- a/apps/react/tsconfig.json
+++ b/apps/react/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "types": ["../../packages/types"]
     }
   },
   "include": ["src"]
