--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@changesets/cli": "^2.26.0",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/navermaps": "^3.7.0",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
