--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -11,11 +11,14 @@
     "lint:fix": "yarn lint --fix"
   },
   "devDependencies": {
-    "@types/navermaps": "^3.7.0",
+    "@types/navermaps": "*",
     "@types/node": "^18.15.0",
     "eslint": "^8.50.0",
     "tsconfig": "*",
     "types": "*",
     "typescript": "*"
+  },
+  "dependencies": {
+    "ts-pattern": "^5.0.5"
   }
 }
