--- a/apps/react/tsconfig.json
+++ b/apps/react/tsconfig.json
@@ -3,9 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "types": ["../../packages/types"]
+      "@/*": ["src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "playground"]
 }
