--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "license": "MIT",
-  "main": "src/index.d.ts",
-  "types": "src/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "lint": "eslint -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "yarn lint --fix"
