fix: lint 설정 파일 문제 해결

--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -20,6 +20,7 @@
     "lint": "eslint -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "yarn lint --fix",
     "build": "vite build -c ./vite.config.ts",
+    "release": "yarn build && ",
     "dev": "vite ./playground"
   },
   "repository": {
