--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,23 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18.18.2
+
+      - name: Install Dependencies
+        run: yarn install --immutable --immutable-cache
+
+      - name: Build
+        run: yarn lint
+
   release:
+    needs: build
     name: Release
     runs-on: ubuntu-latest
     steps:
