--- a/apps/vue/package.json
+++ b/apps/vue/package.json
@@ -20,7 +20,8 @@
     "lint": "eslint -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "yarn lint --fix",
     "build": "vite build -c ./vite.config.ts",
-    "dev": "vite ./playground"
+    "dev": "vite ./playground",
+    "release": "yarn build && yarn changeset publish"
   },
   "repository": {
     "type": "git",
@@ -49,8 +50,9 @@
     "vue": "^3"
   },
   "devDependencies": {
+    "@changesets/cli": "*",
     "@types/navermaps": "*",
-    "@types/node": "^18.15.0",
+    "@types/node": "^18.18.2",
     "@vitejs/plugin-vue": "^4.4.0",
     "eslint": "^8.50.0",
     "tsconfig": "*",
