ci: release publish script command change

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Create Release Pull Request
         uses: changesets/action@v1
         with:
-          publish: yarn changeset publish
+          publish: yarn release
           version: yarn changeset version
           commit: "chore(release): version packages"
         env:
