build: build release 스크립트 추가 및 빌드 시 에러 해결 (#5)
* fix: lint 설정 파일 문제 해결

* ci: add release lint test

* fix(docs): docs build error fix

* build: release script 추가

* ci: release publish script command change

* chore: changeset

--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -20,6 +20,7 @@
     "lint": "eslint -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "yarn lint --fix",
     "build": "vite build -c ./vite.config.ts",
+    "release": "yarn build && yarn changeset publish",
     "dev": "vite ./playground"
   },
   "repository": {
@@ -38,8 +39,7 @@
     "react",
     "react-map",
     "react-naver-maps",
-    "naver-maps",
-    "naver-map"
+    "react-maps"
   ],
   "publishConfig": {
     "access": "public"
@@ -48,8 +48,9 @@
     "react": "^18"
   },
   "devDependencies": {
+    "@changesets/cli": "*",
     "@types/navermaps": "*",
-    "@types/node": "^18.15.0",
+    "@types/node": "^18.18.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.1.0",
