build: yarn publish -> npm publish

--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint -c .eslintrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "yarn lint --fix",
     "build": "vite build -c ./vite.config.ts",
-    "release": "yarn build && yarn publish",
+    "release": "yarn build && npm publish",
     "dev": "vite ./playground"
   },
   "repository": {
